js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-block-labeled-import-call-unknown.js
DONOTEVALUATE
(
)
;
label
:
{
import
.
UNKNOWN
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
;
